# forms

./: .gitignore  config.json  localhost-key.pem  localhost.pem  log.txt  main.py  pyproject.toml  requirements.txt
bedlocation/: .gitignore  POSTER_PROMPT_INSTALL_USAGE.md  equipment_list.xlsx  index.html  manifest.json  service-worker.js
customScript/: Close ECERT.js  autoClosePMOutletGas.js  autoClosePMWheelchair.js  call Custom Script.js  close flowmeter.js  close nibp monitor.js  close nibp sphygmomanometer.js  close suction.js  customScriptEcert.js  customscript.js
daily check/: defibrilator.html  defibrillator.html  getDefibTableData.js  getRefrigeratorData.js  getTemperatureData.js  login.html  scancode_defib.html  scancode_temperature.html  temperature.html
decom/: console.js  index.html
hazard_notice/: .clasp.json  appsscript.json  index.html  รหัส.js
nhealthlab/: .clasp.json  FI-ALP-PY3-00-011-1 R02.docx  FM-ALP-PY3-00-004-93 R02.xlsx  QualityLabHub.html  (+4 more)
nsmart_plus/: .gitignore  README_GUI.md  browser.py  config_manager.py  download_files.py  main.py  main_gui.py  migrate_files.py  pyproject.toml  requirements.txt  run_gui.py  upload_file.py  utils.py
nsmart_plus/config/: config.json
py_test_ui/: .gitignore  backuprecordCal_PM.xlsx  bot_job.py  change File name Baxter.py  closeCAL.py  closePM.py  config.json  doClose.py  duplicate terumo file.py  get repair data.py  import requests.py  log.txt  main.py  pyproject.toml  recordCal_PM.xlsx  requirements.txt  test backup.py  test.py  testV2.py  testV3.py  test_fda.py
py_test_ui/CONFIG/: calibrator_list.json  config.json  emp_list.json  tools_list.json
py_test_ui/EXCEL FILE/: .~lock.recordCal_PM.xlsx#  0DAFA300  Cal By Site JUN24.xlsx  PLS Reports.xlsx  PTP Reports.xlsx  Team Cal P2.xlsx  backuprecordCal_PM.xlsx  equipment_list.xlsx  recordCal_PM.xlsx  recordCal_PM.xlsx~0c485f78f98b4d31270c5ccadbeb964627e8bf45  ~$equipment_list.xlsx  ~$recordCal_PM.xlsx
py_test_ui/REPORTS/: Thumbs.db  aa.py  code list.txt
py_test_ui/SOURCE/: bot_webhook (4).py  change_name.py  close_cal_css.css  download cert.txt  file_dialog.py  move_files.py  read_text.py  test.py
py_test_ui/Task Master/: requirements.txt  test.py
py_test_ui/Task Master/CONFIG/: config.json
py_test_ui/Task Master/EXCEL FILE/: recordCal_PM.xlsx  repair_works_list.xlsx
py_test_ui/Task Master/SOURCE/: change_file_name_baxter.py
(+112 files in other folders)
