[project]
name = "forms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.3",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.11.1",
    "emoji>=2.2.0",
    "html2image>=2.0.1",
    "lxml>=4.9.1",
    "numpy>=1.23.3",
    "openpyxl>=3.0.10",
    "pandas>=1.5.0",
    "pillow>=9.2.0",
    "pyfiglet>=0.8.post1",
    "pymupdf>=1.20.2",
    "pypdf>=3.5.0",
    "pyperclip>=1.8.2",
    "requests>=2.28.1",
    "rich>=12.6.0",
    "urllib3>=1.26.12",
]
