[project]
name = "nsmart-plus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "frontend>=0.0.3",
    "h11==0.16.0",
    "idna==3.11",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "numpy==2.4.0",
    "outcome==1.3.0.post0",
    "pandas==2.3.3",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pygments==2.19.2",
    "pyinstaller==6.3.0",
    "pymupdf==1.26.7",
    "pypdf>=6.6.0",
    "pyperclip==1.11.0",
    "pysocks==1.7.1",
    "pythainlp==5.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "selenium==4.39.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "ttkbootstrap==1.10.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "webdriver-manager>=4.0.2",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
]
