[project]
name = "py-test-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "emoji>=2.15.0",
    "html2image>=2.0.7",
    "lxml>=6.0.2",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyfiglet>=1.0.4",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "pyperclip>=1.11.0",
    "pyqt6>=6.10.1",
    "pyqt6-sip>=13.10.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "selenium>=4.39.0",
    "urllib3>=2.6.2",
    "webdriver-manager>=4.0.2",
]
